# Travel-Assistant

./: .env.example  CONTRIBUTING.md  LICENSE  README.md  app.py  e -Force .git  pyproject.toml  pytest-report.html  pytest.ini
.github/workflows/: ci.yml
agents/: agent.py  formatter.py  normalizer.py
agents/memory/: __init__.py  preference_memory.py
agents/models/: __init__.py  preference.py
agents/nodes/: __init__.py  budget_estimator.py  destination_search.py  itinerary_synthesizer.py  preference_collector.py  route_planner.py  safety_reviewer.py
agents/tools/: collect_preferences.py
data/memory/: user_preferences.json
docs/: TESTING.md
tests/: __init__.py  conftest.py  test_agent_workflow.py  test_collect_preferences.py  test_flights_finder.py  test_hotels_finder.py  test_memory_integration.py  test_memory_simple.py  test_phase2_nodes.py
